# cpprestsdk

./: README.md
Release/samples/: CMakeLists.txt
Release/samples/HelloWorld/: CMakeLists.txt
Release/samples/HelloWorld/HelloWorldListener/: CMakeLists.txt  listen.cpp
Release/samples/HelloWorld/HelloWorldSpeaker/: CMakeLists.txt  speak.cpp
